# getting-started

./: README.md
NXP/txSample1060/: CMakeLists.txt
NXP/txSample1060/app/: CMakeLists.txt  sample_threadx.c
NXP/txSample1060/app/startup/: MIMXRT1062xxxxx_flexspi_nor.ld
NXP/txSample1060/lib/: CMakeLists.txt
NXP/txSample1060/tools/: rebuild.sh
cmake/: arm-gcc-cortex-m7-axb.cmake  linux.cmake
linux/: README.md
linux/nxdUdpDemo/: CMakeLists.txt
linux/nxdUdpDemo/app/: CMakeLists.txt  demo_netx_duo_udp.c  demo_netx_duo_udp2.c~
linux/nxdUdpDemo/tools/: rebuild.sh
linux/nxdUdpDemo/tx_linux/: CMakeLists.txt
linux/nxdUdpUsePcap/: CMakeLists.txt
linux/nxdUdpUsePcap/app_recv/: CMakeLists.txt
linux/nxdUdpUsePcap/app_send/: CMakeLists.txt  demo_netx_duo_udp.c
linux/nxdUdpUsePcap/lib/: CMakeLists.txt
linux/nxdUdpUsePcap/lib/netxduo/: nx_user.h
linux/nxdUdpUsePcap/nxd_linux/: CMakeLists.txt
linux/nxdUdpUsePcap/nxd_linux/src/: nx_pcap_network_driver.c  pcap_utils.c
linux/nxdUdpUsePcap/tools/: mkns.sh  rebuild.sh  recvMulticast.py  rx.sh  send.sh  sendDbg.sh
linux/nxdUdpUsePcap/tx_linux/: CMakeLists.txt
linux/threadxSample/: CMakeLists.txt
linux/threadxSample/app/: CMakeLists.txt
linux/threadxSample/lib/: CMakeLists.txt
